--- a/cloud-init.yaml
+++ b/cloud-init.yaml
@@ -33,7 +33,7 @@ write_files:
       # Create the NVMe subsystem directory
       sudo mkdir -p /sys/kernel/config/nvmet/subsystems/$SUBSYSTEM_NAME
       
-      # Set the subsystem to accept any host
+      echo "Set the subsystem to accept any host:"
       echo 1 | sudo tee /sys/kernel/config/nvmet/subsystems/$SUBSYSTEM_NAME/attr_allow_any_host
       
       # Create and configure the namespace
@@ -69,7 +69,7 @@ write_files:
       # Create the NVMe subsystem directory
       sudo mkdir -p /sys/kernel/config/nvmet/subsystems/$SUBSYSTEM_NAME
       
-      # Set the subsystem to accept any host
+      echo "Set the subsystem to accept any host:"
       echo 1 | sudo tee /sys/kernel/config/nvmet/subsystems/$SUBSYSTEM_NAME/attr_allow_any_host
       
       # Create and configure the namespace
